--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
-    
+    <!-- Шапка -->
+   <header>
+        <nav>
+            <a href="">WebStudio</a>        
+            <ul>
+                <li> <a href="">Студия</a></li>
+                <li> <a href="">Портфолио</a></li>
+                <li> <a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </header>
+   <!-- Основний контент -->
+   <main>
+       <!-- Герой -->
+       <div>
+           <h1>Эффективные решения <br> для вашего бизнеса</h1>
+           <input type="button" value="Заказать услугу">
+       </div>
+   </main>
+   <!-- Футер -->
+   <footer></footer>
 </body>
 </html>
