--- a/index.html
+++ b/index.html
@@ -29,6 +29,63 @@
            <h1>Эффективные решения <br> для вашего бизнеса</h1>
            <input type="button" value="Заказать услугу">
        </div>
+       <!-- Переваги -->
+       <section>
+           <h2>Преимущества</h2>
+           <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+           </ul>
+       </section>
+       <!-- Що ми робимо -->
+       <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="" alt="Создание сайтов для десктоп" width="370" height="294"></li>
+                <li><img src="" alt="Создание сайтов для телефонов" width="370" height="294"></li>
+                <li><img src="" alt="Создание сайтов для планшетов" width="370" height="294"></li>
+            </ul>
+       </section>
+       <!-- Наша команда -->
+       <section>
+           <h2>Наша команда</h2>
+           <ul>
+                <li>
+                    <img src="" alt="Фото Игоря" width="270" height="260">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="" alt="Фото Ольги" width="270" height="260">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="" alt="Фото Николая" width="270" height="260">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="" alt="Фото Михаила" width="270" height="260">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+           </ul>
+       </section>
    </main>
    <!-- Футер -->
    <footer></footer>
