--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
        <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="" alt="Создание сайтов для десктоп" width="370" height="294"></li>
-                <li><img src="" alt="Создание сайтов для телефонов" width="370" height="294"></li>
-                <li><img src="" alt="Создание сайтов для планшетов" width="370" height="294"></li>
+                <li><img src="./images/comp.jpg" alt="Создание сайтов для десктоп" width="370" height="294"></li>
+                <li><img src="./images/mobile.jpg" alt="Создание сайтов для телефонов" width="370" height="294"></li>
+                <li><img src="./images/planshet.jpg" alt="Создание сайтов для планшетов" width="370" height="294"></li>
             </ul>
        </section>
        <!-- Наша команда -->
@@ -65,22 +65,22 @@
            <h2>Наша команда</h2>
            <ul>
                 <li>
-                    <img src="" alt="Фото Игоря" width="270" height="260">
+                    <img src="./images/igor.jpg" alt="Фото Игоря" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="" alt="Фото Ольги" width="270" height="260">
+                    <img src="./images/olga.jpg" alt="Фото Ольги" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="" alt="Фото Николая" width="270" height="260">
+                    <img src="./images/mykola.jpg" alt="Фото Николая" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="" alt="Фото Михаила" width="270" height="260">
+                    <img src="./images/misha.jpg" alt="Фото Михаила" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
