--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
+    <title>Студия</title>
 </head>
 <body>
     <!-- Шапка -->
    <header>
         <nav>
-            <a href="">WebStudio</a>        
+            <a href="">Студия</a>        
             <ul>
                 <li> <a href="">Студия</a></li>
                 <li> <a href="">Портфолио</a></li>
