--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
     <!-- Основний контент -->
     <main>
       <!-- Герой -->
-      <div>
-        <h1>
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
-      </div>
+      </section>
       <!-- Переваги -->
       <section>
         <h2>Преимущества</h2>
@@ -119,7 +116,7 @@
     <footer>
       <a href="">WebStudio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
